changed image size

--- a/models/badge/fields.yaml
+++ b/models/badge/fields.yaml
@@ -31,7 +31,7 @@ secondaryTabs:
             type: fileupload
             mode: image
             imageHeight: 300
-            imageWidth: 100%
+            imageWidth: 500
         excerpt:
             label: Excerpt
             description: a short amount of text about this badge.  This will be displayed in badge listings
