Register location information when accessed with a kiosk that sends the proper HTTP header

--- a/updates/version.yaml
+++ b/updates/version.yaml
@@ -50,3 +50,6 @@
     - Add user groups     
     - create_user_group_table.php
     - create_users_groups_table.php
+1.0.16:
+    - Add uuid to location model
+    - add_location_uuid.php
