- Replaced form widget from relation to recordfinder in order to fix a memory leak when populating  owner group dropdown due to a large dataset. - Commented out Pivot relationship when adding users to group due to a bug in OctoberCMS. - Made searchable popup of the relationship for adding users to a group.

--- a/controllers/groups/config_relations.yaml
+++ b/controllers/groups/config_relations.yaml
@@ -1,14 +1,21 @@
-# ===================================
+# :::::::::::::::::::::::::::::::::::
 #  Relation Behavior Config
-# ===================================
+# :::::::::::::::::::::::::::::::::::
 
 users:
     label: Users
     list: @/plugins/rainlab/user/models/user/columns.yaml
-    form: @/plugins/rainlab/user/models/user/fields.yaml        
-    pivot:
-        title: Hello
-        fields:
-            membership_status:
-                label: Membership status
-                type: dropdown
+    form: @/plugins/rainlab/user/models/user/fields.yaml
+    manage:
+        recordsPerPage: 5
+        showSearch: true
+    # pivot:
+    #     fields:
+    #         membership_status:
+    #             label: Membership status
+    #             type: dropdown
+    #             options:
+    #                 PENDING   : PENDING
+    #                 ACCEPTED  : ACCEPTED
+    #                 REJECTED  : REJECTED
+    #                 CANCELLED : CANCELLED
