--- a/controllers/locations/config_list.yaml
+++ b/controllers/locations/config_list.yaml
@@ -4,6 +4,8 @@
 
 # Model List Column configuration
 list: @/plugins/dma/friends/models/location/columns.yaml
+filter: @/plugins/dma/friends/models/location/config_filter.yaml
+
 
 # Model Class name
 modelClass: DMA\Friends\Models\Location
