--- a/models/location/columns.yaml
+++ b/models/location/columns.yaml
@@ -7,5 +7,8 @@ columns:
         label: Title
     uuid:
         label: UUID
+    is_authorized:
+        label: Authorized for barcode scanner
+        type: switch
     description:
         label: Description
