--- a/updates/version.yaml
+++ b/updates/version.yaml
@@ -53,3 +53,9 @@
 1.0.16:
     - Add uuid to location model
     - add_location_uuid.php
+1.0.17:
+    - Add is_authorized to location model
+    - add_location_is_authorized.php
+1.0.18:
+    - Add barcode_id field to users (NOTE: sync user metadata after this upgrade)
+    - add_user_barcode_id.php
