Changed drop down to show printers instead of location names

--- a/models/location/columns.yaml
+++ b/models/location/columns.yaml
@@ -12,3 +12,7 @@ columns:
         type: switch
     description:
         label: Description
+    printer_membership:
+        label: Membership Printer 
+    printer_reward:
+        label: Reward Printer
