- Added support to template settings within each notification template - Added implementation of ChannelMandrill. Using this channel allow to sync data with MailChimp. - Added type setting to ChannelFlash notification. - Minor bug fixed.

--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
         "twilio/sdk": "3.12.6",
         "j7mbo/twitter-api-php": "dev-master",
         "smirik/php-datetime-ago": "~1.0",
-        "nategood/httpful": "*"        
+        "nategood/httpful": "*",
+        "mandrill/mandrill": "1.0.*"        
     }
 }
