added last modified column

--- a/models/reward/columns.yaml
+++ b/models/reward/columns.yaml
@@ -12,6 +12,9 @@ columns:
     created_at:
         label: Created
         type: datetime
+    updated_at:
+        label: Last Modified
+        type: datetime
     is_published:
         label: Published 
         type: switch
