default steps to 1

--- a/models/step/fields.yaml
+++ b/models/step/fields.yaml
@@ -6,6 +6,7 @@ fields:
     count:
         label: Must complete X amount of times
         type: number
+        default: 1
     activity:
         label: Activity
         type: relation
