- Added FlashMessage tag a custom twig token similar to Flash tag but it will render all messages of each flash type - Integrated Notifification system with BadgeManager, Get Rewards and ActivityCode component - Added Mark all as read option to Notification list component - Added group logic to create unique codes for join the group. - First implementation Join group by code component - Minor updates to notification templates - Tweaks to Groups admin UI

--- a/controllers/groups/config_relations.yaml
+++ b/controllers/groups/config_relations.yaml
@@ -5,10 +5,10 @@
 users:
     label: Users
     list: @/plugins/dma/friends/controllers/groups/user_columns.yaml
-    list: @/plugins/dma/friends/controllers/groups/user_fields.yaml
+    #form: @/plugins/dma/friends/controllers/groups/user_fields.yaml        
     manage:
-        recordsPerPage: 5
-        showSearch: true
+        recordsPerPage: 10
+        showSearch: true    
         
     # pivot:
     #     fields:
@@ -20,3 +20,5 @@ users:
     #                 ACCEPTED  : ACCEPTED
     #                 REJECTED  : REJECTED
     #                 CANCELLED : CANCELLED
+                
+        
