--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,7 @@
         "j7mbo/twitter-api-php": "dev-master",
         "smirik/php-datetime-ago": "~1.0",
         "nategood/httpful": "*",
-        "mandrill/mandrill": "1.0.*"        
+        "mandrill/mandrill": "1.0.*",
+        "hashids/hashids": "1.0.5"       
     }
 }
