--- a/models/settings/fields.yaml
+++ b/models/settings/fields.yaml
@@ -5,6 +5,10 @@
 tabs:
     fields:
         # General
+        organization:
+            label: Institution/Organization
+            span: left
+            tab: General
         timezone:
             label: Timezone
             span: left
@@ -42,8 +46,13 @@ tabs:
             span: auto
             label: Reset groups at:
             tab: Groups
-
+            
         # Notifications
+        reward_notification_group:
+            type: dropdown
+            label: Send admin reward notifications to the following group
+            tab: Notifications
+            span: left
         active_notification_channels:
             type: checkboxlist
             span: auto
