--- a/models/badge/fields.yaml
+++ b/models/badge/fields.yaml
@@ -75,7 +75,8 @@ secondaryTabs:
             span: left
             tab: Configuration
             type: number
-            required: true;
+            required: true
+            default: 0
         maximum_earnings:
             label: Maximum Earnings
             description: The number of times an individual can earn this badge
