--- a/models/reward/fields.yaml
+++ b/models/reward/fields.yaml
@@ -51,15 +51,19 @@ secondaryTabs:
             tab: Configuration
             type: number
             required: true
+            default: 0
+            span: left
         barcode:
             label: Barcode Value
             description: The value of the barcode printed on the coupon.
             tab: Configuration
+            span: left
         inventory:
             label: Inventory
             description: Number of reward items in inventory
             tab: Configuration
             type: number
+            span: left
         enable_email:
             label: Email upon redemption
             description: If checked send an email to the user if they redeem this reward
