- Added session_id to ActivityMetadata model to allow an ease the process of pivoting and grouping the data in this table. - Added hasMetadataValue scope to ActivityMetadata model - Added validation to LikeWorkOrArt activity to validate if user has already like the given artwork number.

--- a/updates/version.yaml
+++ b/updates/version.yaml
@@ -71,3 +71,6 @@
 1.0.24:
     - Add new email options for rewards 
     - add_reward_email_options.php   
+1.0.25:
+    - Add activity metadata session id
+    - add_activity_metadata_session_id.php
